Time: 43 ms (68.37%), Space: 45.2 MB (54.42%) - LeetHub